Se agrego precio por region